--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@types/prismjs": "^1.26.5",
+    "lottie-react": "^2.4.1",
     "pdfjs-dist": "^5.4.149",
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
