feat: Add StyledLandingPage component and update routing in ThemedApp
- Implemented StyledLandingPage component with a comprehensive layout including header, hero section, features, AI models, developer section, FAQ, CTA, and footer.
- Integrated Google Sign-In functionality within StyledLandingPage.
- Updated ThemedApp to route the root path ("/") to StyledLandingPage instead of SignInPage.
- Adjusted routing for the chat application to be accessible at "/chat".

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.2",
     "@types/prismjs": "^1.26.5",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.542.0",
     "pdfjs-dist": "^5.4.149",
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
