--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@types/prismjs": "^1.26.5",
+    "@types/typed.js": "^2.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "pdfjs-dist": "^5.4.149",
@@ -25,7 +26,8 @@
     "react-router-dom": "^7.8.2",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
