--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdfjs-dist": "^5.4.149",
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
+    "react-canvas-confetti": "^2.0.7",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
