--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 # Google OAuth Configuration
 # Replace with your actual Google OAuth Client ID
-VITE_GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID_HERE
+VITE_GOOGLE_CLIENT_ID=322246847754-96nn96n2gu70rr6uiqmm9n8jc1eja9ba.apps.googleusercontent.com
