--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@types/prismjs": "^1.26.5",
     "@types/typed.js": "^2.0.0",
     "@types/uuid": "^10.0.0",
@@ -26,6 +27,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
