--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/typed.js": "^2.0.0",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "pdfjs-dist": "^5.4.149",
